<resources>
    <string name="app_name">LoginActivity</string>
    <string name="registro">Registro</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="ingreso_contraseña">Ingresa tu contraseña</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="correo">Correo:</string>
    <string name="registrar">Registrar</string>
    <string name="repita_contrase_a">Repite tu contraseña</string>
    <string name="correo_cuenta">Has iniciado sesión!</string>
    <string name="resultado">Resultado</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="bn_iniciar_sesion">Iniciar sesión</string>
    <string name="title_activity_drawer_nav">DrawerNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="android_studio">Android Studio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiar_clave">Cambiar Clave</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mi_servicio">Mi servicio</string>
    <string name="salir">Salir</string>
    <string name="Usuario">Usuario</string>
    <string name="Usuario_Name">Nombre de usuario</string>
    <string name="guardar">Guardar</string>
    <string name="Nombre_de_usuario">Usuario</string>
    <string name="ciudad">Ciudad</string>
    <string name="Lugar_de_origen">Lugar de origen</string>
    <string name="Lugar_de_destino">Lugar de destino</string>
    <string name="enviar">Enviar</string>
    <string name="Correo">Correo</string>
    <string name="Move_app">MoveApp</string>
    <string name="Cambiar_clave">Cambiar clave</string>
    <string name="facebook_app_id">1562667437209183</string>
    <string name="fb_login_protocol_scheme">fb1562667437209183</string>
    <string name="verificar">Verificar</string>
    <string name="autenticaci_n">Autenticación</string>

</resources>
