<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MiperfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil"
            android:textSize="30dp"
            android:layout_marginTop="100dp"
            android:gravity="center"/>

        <ImageView android:layout_width="235dp"
                   android:layout_height="181dp"
                   android:src="@drawable/girl"
                   android:layout_marginTop="5dp"
                   android:layout_gravity="center"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/avatar"
                       android:paddingLeft="40dp"
                       android:paddingRight="25dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Nombre_de_usuario"
                      android:layout_gravity="center"
                      android:paddingLeft="50dp"/>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/mail"
                       android:paddingLeft="40dp"
                       android:paddingRight="25dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Correo"
                      android:layout_gravity="center"
                      android:paddingLeft="50dp"/>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/skyline"
                       android:paddingLeft="40dp"
                       android:paddingRight="25dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/ciudad"
                      android:layout_gravity="center"
                      android:paddingLeft="50dp"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>