<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:orientation="vertical">
            <ImageView android:layout_width="355dp"
                       android:layout_height="337dp"
                       android:layout_marginTop="10dp"
                       android:src="@drawable/registrarimg"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_margin="16dp">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="41dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/usuarioimg"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etCorreoRe"
                          android:hint="@string/ingresa_correo"
                          android:fontFamily="sans-serif"
                          android:inputType="textEmailAddress"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_margin="16dp">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="41dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/contraseniimg2"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etContraseñaRe"
                          android:hint="@string/ingreso_contraseña"
                          android:fontFamily="sans-serif"
                          android:inputType="textPassword"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_margin="16dp">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="41dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/contraseniimg2"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etRepiteContraseñaRe"
                          android:hint="@string/repita_contrase_a"
                          android:fontFamily="sans-serif"
                          android:inputType="textPassword"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:padding="30dp">
                <Button android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/bnRegistrar"
                        android:background="@drawable/button_animation"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/color_azulOscuro"
                        android:text="@string/registrar"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>