<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MiservicioFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/google_background"
                  android:gravity="center">

        <LinearLayout android:layout_width="300dp"
                      android:layout_height="240dp"
                      android:background="@color/white"
                      android:orientation="vertical">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/gps"
                       android:paddingLeft="40dp"
                       android:paddingRight="25dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Lugar_de_origen"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="20dp"/>

        </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginTop="20dp">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/gps2"
                           android:paddingLeft="40dp"
                           android:paddingRight="25dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Lugar_de_destino"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="20dp"/>

            </LinearLayout>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_animation"
                    android:textColor="@color/color_azulOscuro"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:text="@string/enviar"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
            />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>